added authz guard

--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
+PORT=3004
+NODE_ENV="develop"
 
 DB_HOST="localhost"
 DB_PORT=5432
 DB_USER="root"
 DB_PASS="root"
 DB_NAME="coffeine-tracker"
+
+AUTH0_ISSUER_URL=https://devkhris.au.auth0.com/
+AUTH0_AUDIENCE=https://ct.devkhris.com
