added auth module

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,16 @@
 
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASS=
-DB_NAME=
+PORT=3004
+NODE_ENV="develop"
+
+DB_HOST=  #Required
+DB_PORT=  #Required
+DB_USER=  #Required
+DB_PASS=  #Required
+DB_NAME=  #Required
+
+AUTH0_DOMAIN= #Required
+AUTH0_CLIENT_ID= #Required
+AUTH0_CLIENT_SECRET= #Required
+AUTH0_ISSUER_URL= #Required
+AUTH0_AUDIENCE=  #Required
+AUTH0_CALLBACK=  #Required
